--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:textAlignment="textStart"
-            android:text="@{user.body}"
+            android:text="@{post.body}"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
