--- a/app/src/main/res/layout/posts_fragment.xml
+++ b/app/src/main/res/layout/posts_fragment.xml
@@ -13,7 +13,7 @@
         android:id="@+id/post"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context="unideb.hu.fakebookc7zvm2.ui.posts.Posts">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/post_list"
