--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -10,10 +10,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="unideb.hu.fakebookc7zvm2.ui.main.MainFragment">
+        tools:context="unideb.hu.fakebookc7zvm2.MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/user_list"
