--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -25,6 +25,7 @@
             android:text="@{post.title}"
             android:textColor="#000000"
             android:textSize="20sp"
+            android:maxLines="1"
             android:textAlignment="textStart"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,13 +37,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:textAlignment="textStart"
+            android:ellipsize="end"
+            android:maxLines="4"
             android:text="@{post.body}"
+            android:textAlignment="textStart"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
